--- a/dasteen/style.css
+++ b/dasteen/style.css
@@ -199,7 +199,7 @@ section img{
     line-height: normal;
     text-transform: capitalize;
 }
-.category nav ul{
+.category ul{
     display: flex;
     justify-content: center;
     align-items: center;
