--- a/dasteen/style.css
+++ b/dasteen/style.css
@@ -153,7 +153,7 @@ section img{
 /*------------------section category----------------------*/
 
 .category{
-    margin-top: 345px;
+    margin: 345px 0 68px 0;
 }
 .category .header-category{
     display: flex;
@@ -241,4 +241,237 @@ section img{
 }
 .category-card:hover p{
     color: #FFFFFE;
+}
+
+/*------------------section article----------------------*/
+.article-post{
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 80px;
+}
+.article{
+    margin: 448px 0 0 94px;
+    display: flex;
+    width: 1252px;
+    height: 35px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+.card-post{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    gap: 16px;
+}
+.header-article{
+    display: flex;
+    width: 1252px;
+    height: 35px;
+    padding: 2px 0 3px 0;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 895px;
+    flex-shrink: 0;
+}
+.art-link{
+    display: flex;
+    width: 159px;
+    height: 25px;
+    flex-shrink: 0;
+}
+.header-article h4{
+    color: #2B2C34;
+    /* 24 px - Sub heading 1 */
+    font-family: "Plus Jakarta Sans", serif;
+    font-size: 24px;
+    font-weight: 700;
+    text-transform: capitalize;
+}
+.art-link p{
+    color: #2B2C34;
+    text-align: right;
+    /* 20 px - Sub Heading 2 */
+    font-family: "Plus Jakarta Sans", serif;
+    font-size: 20px;
+    font-weight: 700;
+    text-transform: capitalize;
+}
+.art-link svg{
+    width: 6px;
+    height: 14px;
+    flex-shrink: 0;
+    margin: 9px 0 0 12px;
+    color: #2B2C34;
+    text-align: right;
+
+    /* 20 px - Sub Heading 2 */
+    font-family: "Plus Jakarta Sans", serif;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: capitalize;
+}
+.card-post{
+    display: flex;
+    width: 1252px;
+    height: 490px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+.article-card{
+    display: flex;
+    width: 260px;
+    height: 385px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 80px;
+}
+.article-title{
+    width: 260px;
+    height: 273px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 25px;
+}
+.article-title img{
+    width: 260px;
+    height: 198px;
+    border-radius: 13px;
+    background: url(photo/fundament-js.png) lightgray 50% / cover no-repeat;
+    margin: 0;
+}
+.article-title h5{
+    width: 260px;
+    color: #2B2C34;
+    /* 20 px - Sub Heading 2 */
+    font-family: "Plus Jakarta Sans", serif;
+    font-size: 20px;
+    font-weight: 700;
+    text-transform: capitalize;
+}
+.author{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+}
+.author img{
+    width: 57px;
+    height: 57px;
+    border-radius: 57px;
+    background: url(photo/author.png) lightgray 50% / cover no-repeat;
+    margin: 0;
+}
+.author-info{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 4px;
+}
+.author-info h6{
+    color: #2B2C34;
+    /* 16 px - Paragraph 3 Semi bold */
+    font-family: "Plus Jakarta Sans", serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+.author-info p{
+    width: 184px;
+    height: 21px;
+    color: #2B2C34;
+    /* 14 px - Paragraph 4 */
+    font-family: "Plus Jakarta Sans", serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-transform: capitalize;
+}
+.header-article-css{
+    display: flex;
+    width: 1252px;
+    height: 35px;
+    padding: 2px 0 3px 0;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 1043px;
+    flex-shrink: 0;
+    margin-top: 80px;
+}
+.header-article-css h4{
+    color: #2B2C34;
+    /* 24 px - Sub heading 1 */
+    font-family: "Plus Jakarta Sans", serif;
+    font-size: 24px;
+    font-weight: 700;
+    text-transform: capitalize;
+}
+.header-article-js{
+    display: flex;
+    width: 1252px;
+    height: 35px;
+    padding: 2px 0 3px 0;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 975px;
+    flex-shrink: 0;
+    margin-top: 80px;
+}
+.header-article-js h4{
+    color: #2B2C34;
+    /* 24 px - Sub heading 1 */
+    font-family: "Plus Jakarta Sans", serif;
+    font-size: 24px;
+    font-weight: 700;
+    text-transform: capitalize;
+}
+.header-article-react{
+    display: flex;
+    width: 1252px;
+    height: 35px;
+    padding: 2px 0 3px 0;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 985px;
+    flex-shrink: 0;
+    margin-top: 80px;
+}
+.header-article-react h4{
+    color: #2B2C34;
+    /* 24 px - Sub heading 1 */
+    font-family: "Plus Jakarta Sans", serif;
+    font-size: 24px;
+    font-weight: 700;
+    text-transform: capitalize;
+}
+.button-art{
+    display: flex;
+    padding: 20px 23px 19px 23px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 8px;
+    background: #6246EA;
+    color: #FFFFFE;
+
+    /* 20 px - Sub Heading 2 */
+    font-family: "Plus Jakarta Sans", serif;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: capitalize;
+    margin-top: 80px;
 }
