--- a/dasteen/style.css
+++ b/dasteen/style.css
@@ -26,7 +26,7 @@ header{
     align-items: center;
     margin-left: 95px;
 }
-header div h1{
+.dasteen-title h1{
     color: #001858;
     font-family: "Plus Jakarta Sans", serif;
     font-size: 36px;
@@ -34,7 +34,7 @@ header div h1{
     font-weight: 600;
     line-height: normal;
 }
-header div span{
+.dasteen-title span{
     color: #6246EA;
     font-family: "Plus Jakarta Sans", serif;
     font-size: 18px;
@@ -538,4 +538,163 @@ section img{
     font-family: "Plus Jakarta Sans", serif;
     font-size: 20px;
     font-weight: 400;
+}
+
+/*------------------footer----------------------*/
+
+.footer{
+    display: inline-flex;
+    align-items: flex-start;
+    gap: 160px;
+}
+.about-web{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+    margin-left: 95px;
+}
+.footer-logo{
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    gap: 2px;
+}
+.footer-logo .dasteen-title{
+    margin: 0;
+}
+.about-web p{
+    width: 284px;
+    color: #2B2C34;
+    /* 18 px - Paragraph 2 */
+    font-family: "Plus Jakarta Sans", serif;
+    font-size: 18px;
+    font-weight: 400;
+}
+.footer-link{
+    display: flex;
+    align-items: flex-start;
+    gap: 95px;
+}
+.footer-category{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 25px;
+}
+.footer-category p{
+    color: #2B2C34;
+    font-family: "Plus Jakarta Sans", serif;
+    font-size: 20px;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+.footer-category ul{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+}
+.footer-category ul li a{
+    color: #2B2C34;
+    /* 18 px - Paragraph 2 */
+    font-family: "Plus Jakarta Sans", serif;
+    font-size: 18px;
+    font-weight: 400;
+}
+.about{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 25px;
+}
+.about p{
+    color: #2B2C34;
+    font-family: "Plus Jakarta Sans", serif;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: uppercase;
+}
+.about ul{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+}
+.about ul li a{
+    color: #2B2C34;
+    /* 18 px - Paragraph 2 */
+    font-family: "Plus Jakarta Sans", serif;
+    font-size: 18px;
+    font-weight: 400;
+}
+.touch{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 25px;
+}
+.touch p{
+    color: #2B2C34;
+    font-family: "Plus Jakarta Sans", serif;
+    font-size: 20px;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+.touch ul{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+}
+.touch ul li{
+    color: #2B2C34;
+
+    /* 18 px - Paragraph 2 */
+    font-family: "Plus Jakarta Sans", serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+.follow{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 25px;
+}
+.follow p{
+    color: #2B2C34;
+    font-family: "Plus Jakarta Sans", serif;
+    font-size: 20px;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+.follow ul{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+}
+.follow ul li{
+    color: #2B2C34;
+    font-family: "Plus Jakarta Sans", serif;
+    font-size: 18px;
+    font-weight: 400;
+    text-transform: capitalize;
+}
+.footer-line{
+    width: 1250px;
+    height: 1px;
+    background: #C0C0C0;
+    margin: 50px 0 0 95px;
+}
+.footer-last-text{
+    color: #2B2C34;
+    font-family: "Plus Jakarta Sans", serif;
+    font-size: 14px;
+    font-weight: 400;
+    margin: 26px 0 26px 95px;
 }
