зміни в style.css 'font>body' добавив в 'hover' 'transition' зміни 'padding' 'margin' в style.css

--- a/dasteen/style.css
+++ b/dasteen/style.css
@@ -7,7 +7,7 @@
     list-style-type: none;
 }
 body{
-    width: 1440px;
+    font-family: "Plus Jakarta Sans", serif;
 }
 /*------------------header----------------------*/
 
@@ -30,15 +30,11 @@ header{
 }
 .dasteen-title h1{
     color: #001858;
-    font-family: "Plus Jakarta Sans", serif;
     font-size: 36px;
-    font-style: normal;
     font-weight: 600;
-    line-height: normal;
 }
 .dasteen-title span{
     color: #6246EA;
-    font-family: "Plus Jakarta Sans", serif;
     font-size: 18px;
     font-weight: 700;
 }
@@ -51,8 +47,6 @@ header ul{
 }
 header ul li a{
     color: #2B2C34;
-    /* 20 px - Sub Heading 2 */
-    font-family: "Plus Jakarta Sans", serif;
     font-size: 20px;
     font-weight: 700;
     text-transform: capitalize;
@@ -70,7 +64,6 @@ header ul li button{
     border-radius: 4px;
     background: #6246EA;
     color: #FFFFFE;
-    font-family: "Plus Jakarta Sans", serif;
     font-size: 18px;
     font-weight: 700;
     text-transform: capitalize;
@@ -84,17 +77,15 @@ header ul li button img{
 /*------------------section registration----------------------*/
 
 .registration{
+    height: 1000px;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 250px;
     background: #EFF0F3;
 }
 .registration div h2{
     width: 617px;
     color: #2B2C34;
-    /* 64 px - Heading 1 */
-    font-family: "Plus Jakarta Sans", serif;
     font-size: 64px;
     font-weight: 700;
     text-transform: capitalize;
@@ -103,8 +94,6 @@ header ul li button img{
 .registration div p{
     width: 652px;
     color: #9A9494;
-    /* 20 px - Paragraph 1 */
-    font-family: "Plus Jakarta Sans", serif;
     font-size: 20px;
     font-weight: 400;
     margin-bottom: 30px;
@@ -127,7 +116,6 @@ input[type="email"]{
     appearance: none;
     padding: 21px 200px 21px 25px;
     border: none;
-    /* 20 px - Paragraph 1 */
     font-size: 20px;
     font-weight: 400;
     border-radius: 8px;
@@ -135,13 +123,8 @@ input[type="email"]{
 }
 input::placeholder{
     color: #C0C0C0;
-
-    /* 20 px - Paragraph 1 */
-    font-family: "Plus Jakarta Sans", serif;
     font-size: 20px;
-    font-style: normal;
     font-weight: 400;
-    line-height: normal;
 }
 input[type="submit"]{
     appearance: none;
@@ -151,8 +134,6 @@ input[type="submit"]{
     border-radius: 8px;
     background: #6246EA;
     color: #FFFFFE;
-    /* 20 px - Sub Heading 2 */
-    font-family: "Plus Jakarta Sans", serif;
     font-size: 20px;
     font-weight: 700;
     text-transform: capitalize;
@@ -165,9 +146,10 @@ section img{
 /*------------------section category----------------------*/
 
 .category{
-    height: 500px;
-    margin: 345px 0 68px 0;
+    height: 600px;
+    padding-top: 150px;
     background: #EFF0F3;
+    margin-bottom: 148px;
 }
 .category .header-category{
     display: flex;
@@ -182,8 +164,6 @@ section img{
 }
 .category .header-category h3{
     color: #2B2C34;
-    /* 24 px - Sub heading 1 */
-    font-family: "Plus Jakarta Sans", serif;
     font-size: 24px;
     font-weight: 700;
     text-transform: capitalize;
@@ -191,8 +171,6 @@ section img{
 .category .header-category div p{
     color: #2B2C34;
     text-align: right;
-    /* 20 px - Sub Heading 2 */
-    font-family: "Plus Jakarta Sans", serif;
     font-size: 20px;
     font-weight: 700;
     text-transform: capitalize;
@@ -204,13 +182,8 @@ section img{
     margin: 5px 0 0 12px;
     color: #2B2C34;
     text-align: right;
-
-    /* 20 px - Sub Heading 2 */
-    font-family: "Plus Jakarta Sans", serif;
     font-size: 20px;
-    font-style: normal;
     font-weight: 700;
-    line-height: normal;
     text-transform: capitalize;
 }
 .category ul{
@@ -223,17 +196,18 @@ section img{
     width: 220px;
     height: 280px;
     border-radius: 8px;
+    background: #FFFFFE;
     /* For White Background */
     box-shadow: 4px 6px 13px 0 rgba(215, 215, 215, 0.25);
+    transition: 1.2s;
 }
 .category-card p{
     color: #2B2C34;
-    /* 24 px - Sub heading 1 */
-    font-family: "Plus Jakarta Sans", serif;
     font-size: 24px;
     font-weight: 700;
     text-transform: capitalize;
     margin-left: 43px;
+    transition: 0.7s;
 }
 .category-card div{
     width: 60px;
@@ -244,11 +218,12 @@ section img{
     margin: 77px 144px 30px 43px;
 }
 .category-card:hover{
-    border-radius: 8px;
+    transition: 1.2s;
     background: #6246EA;
-
+    box-shadow: 4px 6px 13px 0 rgba(215, 215, 215, 0.25);
 }
 .category-card:hover p{
+    transition: 0.7s;
     color: #FFFFFE;
 }
 
@@ -298,8 +273,6 @@ section img{
 }
 .header-article h4{
     color: #2B2C34;
-    /* 24 px - Sub heading 1 */
-    font-family: "Plus Jakarta Sans", serif;
     font-size: 24px;
     font-weight: 700;
     text-transform: capitalize;
@@ -307,8 +280,6 @@ section img{
 .art-link p{
     color: #2B2C34;
     text-align: right;
-    /* 20 px - Sub Heading 2 */
-    font-family: "Plus Jakarta Sans", serif;
     font-size: 20px;
     font-weight: 700;
     text-transform: capitalize;
@@ -316,17 +287,11 @@ section img{
 .art-link svg{
     width: 6px;
     height: 14px;
-    flex-shrink: 0;
     margin: 9px 0 0 12px;
     color: #2B2C34;
     text-align: right;
-
-    /* 20 px - Sub Heading 2 */
-    font-family: "Plus Jakarta Sans", serif;
     font-size: 20px;
-    font-style: normal;
     font-weight: 700;
-    line-height: normal;
     text-transform: capitalize;
 }
 .card-post{
@@ -367,8 +332,6 @@ section img{
 .article-title h5{
     width: 260px;
     color: #2B2C34;
-    /* 20 px - Sub Heading 2 */
-    font-family: "Plus Jakarta Sans", serif;
     font-size: 20px;
     font-weight: 700;
     text-transform: capitalize;
@@ -394,23 +357,16 @@ section img{
 }
 .author-info h6{
     color: #2B2C34;
-    /* 16 px - Paragraph 3 Semi bold */
-    font-family: "Plus Jakarta Sans", serif;
     font-size: 16px;
-    font-style: normal;
     font-weight: 600;
-    line-height: normal;
+
 }
 .author-info p{
     width: 184px;
     height: 21px;
     color: #2B2C34;
-    /* 14 px - Paragraph 4 */
-    font-family: "Plus Jakarta Sans", serif;
     font-size: 14px;
-    font-style: normal;
     font-weight: 400;
-    line-height: normal;
     text-transform: capitalize;
 }
 .point{
@@ -427,13 +383,10 @@ section img{
     justify-content: center;
     align-items: flex-start;
     gap: 1043px;
-    flex-shrink: 0;
     margin: 80px 0 30px 0;
 }
 .header-article-css h4{
     color: #2B2C34;
-    /* 24 px - Sub heading 1 */
-    font-family: "Plus Jakarta Sans", serif;
     font-size: 24px;
     font-weight: 700;
     text-transform: capitalize;
@@ -446,13 +399,10 @@ section img{
     justify-content: center;
     align-items: flex-start;
     gap: 975px;
-    flex-shrink: 0;
     margin: 80px 0 30px 0;
 }
 .header-article-js h4{
     color: #2B2C34;
-    /* 24 px - Sub heading 1 */
-    font-family: "Plus Jakarta Sans", serif;
     font-size: 24px;
     font-weight: 700;
     text-transform: capitalize;
@@ -465,13 +415,10 @@ section img{
     justify-content: center;
     align-items: flex-start;
     gap: 985px;
-    flex-shrink: 0;
     margin: 80px 0 30px 0;
 }
 .header-article-react h4{
     color: #2B2C34;
-    /* 24 px - Sub heading 1 */
-    font-family: "Plus Jakarta Sans", serif;
     font-size: 24px;
     font-weight: 700;
     text-transform: capitalize;
@@ -485,16 +432,12 @@ section img{
     border-radius: 8px;
     background: #6246EA;
     color: #FFFFFE;
-
-    /* 20 px - Sub Heading 2 */
-    font-family: "Plus Jakarta Sans", serif;
     font-size: 20px;
-    font-style: normal;
     font-weight: 700;
-    line-height: normal;
     text-transform: capitalize;
     margin-top: 80px;
     border: none;
+    font-family: "Plus Jakarta Sans", serif;
 }
 .article-card:hover{
     /* For White Background */
@@ -533,7 +476,6 @@ section img{
 }
 .title-sub{
     color: #2B2C34;
-    font-family: "Plus Jakarta Sans", serif;
     font-size: 36px;
     font-weight: 700;
     text-transform: capitalize;
@@ -542,17 +484,13 @@ section img{
     width: 696px;
     color: #C0C0C0;
     text-align: center;
-    /* 20 px - Paragraph 1 */
-    font-family: "Plus Jakarta Sans", serif;
     font-size: 20px;
     font-weight: 400;
 }
 .button-sub{
     display: flex;
     align-items: flex-start;
-    gap: 20px;
 }
-
 
 /*------------------footer----------------------*/
 
@@ -585,8 +523,6 @@ footer{
 .about-web p{
     width: 284px;
     color: #2B2C34;
-    /* 18 px - Paragraph 2 */
-    font-family: "Plus Jakarta Sans", serif;
     font-size: 18px;
     font-weight: 400;
 }
@@ -603,7 +539,6 @@ footer{
 }
 .footer-category p{
     color: #2B2C34;
-    font-family: "Plus Jakarta Sans", serif;
     font-size: 20px;
     font-weight: 700;
     text-transform: uppercase;
@@ -616,8 +551,6 @@ footer{
 }
 .footer-category ul li a{
     color: #2B2C34;
-    /* 18 px - Paragraph 2 */
-    font-family: "Plus Jakarta Sans", serif;
     font-size: 18px;
     font-weight: 400;
 }
@@ -629,11 +562,8 @@ footer{
 }
 .about p{
     color: #2B2C34;
-    font-family: "Plus Jakarta Sans", serif;
     font-size: 20px;
-    font-style: normal;
     font-weight: 700;
-    line-height: normal;
     text-transform: uppercase;
 }
 .about ul{
@@ -644,8 +574,6 @@ footer{
 }
 .about ul li a{
     color: #2B2C34;
-    /* 18 px - Paragraph 2 */
-    font-family: "Plus Jakarta Sans", serif;
     font-size: 18px;
     font-weight: 400;
 }
@@ -657,7 +585,6 @@ footer{
 }
 .touch p{
     color: #2B2C34;
-    font-family: "Plus Jakarta Sans", serif;
     font-size: 20px;
     font-weight: 700;
     text-transform: uppercase;
@@ -670,13 +597,8 @@ footer{
 }
 .touch ul li{
     color: #2B2C34;
-
-    /* 18 px - Paragraph 2 */
-    font-family: "Plus Jakarta Sans", serif;
     font-size: 18px;
-    font-style: normal;
     font-weight: 400;
-    line-height: normal;
 }
 .follow{
     display: flex;
@@ -686,7 +608,6 @@ footer{
 }
 .follow p{
     color: #2B2C34;
-    font-family: "Plus Jakarta Sans", serif;
     font-size: 20px;
     font-weight: 700;
     text-transform: uppercase;
@@ -699,7 +620,6 @@ footer{
 }
 .follow ul li{
     color: #2B2C34;
-    font-family: "Plus Jakarta Sans", serif;
     font-size: 18px;
     font-weight: 400;
     text-transform: capitalize;
@@ -712,7 +632,6 @@ footer{
 }
 .footer-last-text{
     color: #2B2C34;
-    font-family: "Plus Jakarta Sans", serif;
     font-size: 14px;
     font-weight: 400;
     padding: 26px 0 26px 95px;
